<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none" android:id="@+id/home">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_home_black_24dp"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/navigation_menu_home" />
    </group>

    <group android:checkableBehavior="none" android:id="@+id/overview">
        <item
            android:id="@+id/navOverView"
            android:icon="@drawable/ic_pie_chart_outlined_black_24dp"
            android:title="@string/navigation_menu_overview" />
    </group>

    <group android:checkableBehavior="none" android:id="@+id/group">
        <item
            android:id="@+id/navGroups"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/navigation_menu_groups" />
    </group>

    <group android:checkableBehavior="none" android:id="@+id/profile">
        <item
            android:id="@+id/navProfile"
            android:icon="@drawable/ic_perm_identity_black_24dp"
            android:title="@string/navigation_menu_profile" />
    </group>

</menu>
